--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
             </div>
             
             <div class="bg-gray-50 rounded-3xl p-8 md:p-12 fade-in">
-                <form action="https://formspree.io/f/xvgpqrst" method="POST" class="space-y-6">
+                <form action="https://formspree.io/f/mvgbojnp" method="POST" class="space-y-6">
                     <div class="grid md:grid-cols-2 gap-6">
                         <div>
                             <label for="name" class="block text-sm font-medium text-gray-700 mb-2">お名前</label>
