--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                                 <i class="fas fa-calendar text-blue-600 mt-1"></i>
                                 <div>
                                     <h4 class="font-semibold text-gray-900">設立</h4>
-                                    <p class="text-gray-600">2018年4月</p>
+                                    <p class="text-gray-600">2024年8月</p>
                                 </div>
                             </div>
                             <div class="flex items-start space-x-4">
@@ -545,16 +545,14 @@
                                 <div>
                                     <h4 class="font-semibold text-gray-900">所在地</h4>
                                     <p class="text-gray-600">
-                                        〒150-0001<br>
-                                        東京都渋谷区神宮前6-23-4 桑野ビル2階
+                                        〒124-0022<br>
+                                        東京都葛飾区奥戸3-22-14
                                     </p>
                                 </div>
                             </div>
                             <div class="flex items-start space-x-4">
                                 <i class="fas fa-user-tie text-blue-600 mt-1"></i>
                                 <div>
-                                    <h4 class="font-semibold text-gray-900">代表者</h4>
-                                    <p class="text-gray-600">代表取締役 有田</p>
                                 </div>
                             </div>
                         </div>
@@ -695,7 +693,6 @@
                         </div>
                         <h3 class="font-semibold text-gray-900 mb-2">Email</h3>
                         <p class="text-gray-600">info@rubato-tech.co.jp</p>
-                        <p class="text-sm text-gray-500 mt-1">管理者: arita@rubato-tech.co.jp</p>
                     </div>
                     <div>
                         <div class="w-12 h-12 bg-green-100 rounded-full flex items-center justify-center mx-auto mb-4">
