--- a/index.html
+++ b/index.html
@@ -911,12 +911,12 @@
                     <div>
                         <h3 class="text-lg font-bold mb-4">事業内容</h3>
                         <ul class="space-y-2 text-gray-600">
-                            <li>• システム開発・保守</li>
-                            <li>• SES・IT人材サービス</li>
-                            <li>• データ分析・BI構築</li>
-                            <li>• AI・機械学習ソリューション</li>
-                            <li>• 技術コンサルティング</li>
-                            <li>• フリーランスエンジニア支援</li>
+                            <li> システム開発・保守</li>
+                            <li> SES・IT人材サービス</li>
+                            <li> データ分析・BI構築</li>
+                            <li> AI・機械学習ソリューション</li>
+                            <li> 技術コンサルティング</li>
+                            <li> フリーランスエンジニア支援</li>
                         </ul>
                     </div>
                 </div>
