--- a/index.html
+++ b/index.html
@@ -681,9 +681,10 @@
         </div>
         <div class="max-w-4xl mx-auto text-center px-6 relative z-10">
             <h1 class="text-6xl font-bold mb-6 fade-in">
-                最新技術と柔軟な対応力で<br>
-                <span class="text-gradient">AIから基幹システムまでワンストップ実現</span><br>
-                DATA IN HARMONY
+               最新技術と柔軟な対応力で<br>
+                <span class="text-gradient">AIから基幹システムまで</span><br>
+                ワンストップ実現<br>
+                <span style="font-size: 0.7em; display: block; margin-top: 1rem;">DATA IN HARMONY</span>
             </h1>
             <p class="text-xl text-gray-300 mb-8 max-w-2xl mx-auto fade-in stagger-1">
                 システム開発から技術支援まで、幅広いITソリューションで<br>
