--- a/index.html
+++ b/index.html
@@ -805,11 +805,11 @@
                     <h3 class="text-2xl font-bold mb-4">VALUES</h3>
                     <h4 class="text-lg font-medium mb-4 text-gradient">価値観</h4>
                     <ul class="text-gray-300 text-sm space-y-2">
-                        <li>• 手厚いサポート体制</li>
-                        <li>• フットワークの軽さ</li>
-                        <li>• 継続的な技術力向上</li>
-                        <li>• パートナーシップ重視</li>
-                        <li>• 品質への妥協なきこだわり</li>
+                        <li>手厚いサポート体制</li>
+                        <li>フットワークの軽さ</li>
+                        <li>継続的な技術力向上</li>
+                        <li>パートナーシップ重視</li>
+                        <li>品質への妥協なきこだわり</li>
                     </ul>
                 </div>
             </div>
@@ -1087,12 +1087,12 @@
                     <div>
                         <h3 class="text-lg font-bold mb-4">事業内容</h3>
                         <ul class="space-y-2 text-gray-600">
-                            <li>• システム開発・保守</li>
-                            <li>• SES・IT人材サービス</li>
-                            <li>• データ分析・BI構築</li>
-                            <li>• AI・機械学習ソリューション</li>
-                            <li>• 技術コンサルティング</li>
-                            <li>• フリーランスエンジニア支援</li>
+                            <li> システム開発・保守</li>
+                            <li> SES・IT人材サービス</li>
+                            <li> データ分析・BI構築</li>
+                            <li> AI・機械学習ソリューション</li>
+                            <li> 技術コンサルティング</li>
+                            <li> フリーランスエンジニア支援</li>
                         </ul>
                     </div>
                 </div>
